# bmp-reader

./: .gitignore  CMakeLists.txt
headers/: bmp.h
src/: main.cpp
